2008-07-22  Akira TAGOH  <tagoh@redhat.com>

	* src/xsettings-common.[ch]: a copy of reference implementation for
	XSETTINGS common functions.

	* src/xsettings-manager.[ch]: a copy of reference implementation for
	XSETTINGS manager.

	* src/factory_xsettings.c: simple XSETTINGS daemon.

2008-07-17  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_get_error_quark): new.
	(imsettings_info_monitor_new): new.
	(imsettings_info_monitor_free): new.
	(imsettings_info_monitor_targeted_new): new.
	(imsettings_info_monitor_targeted_free): new.
	(imsettings_info_manager_add_info): change the behavior a bit to update
	the hash anyway.
	(imsettings_info_manager_remove_info): make a copy of IM name
	before removing from the hash. that may possibly points out
	the invalid pointer.
	(imsettings_info_manager_real_changed_xinputd): sanity check of
	the filename.
	(imsettings_info_manager_real_changed_xinputd): at the end, notify
	the change of the file to the handlers of xinputrc and .xinputrc to
	not miss the flag for them.
	this is the kind of the race condition issue.
	(imsettings_info_manager_setup_monitor_for_xinputrc_target): new.

2008-07-16  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_set_property):
	parameterize the homedir instead of hardcoded path.

	* tests/rhbz_431291.c: Add a testcase for the user specific conf.

	* utils/imsettings-info.c (main): show up the icon file.

2008-07-15  Akira TAGOH  <tagoh@redhat.com>

	* tests/rhbz_455363.c: a testcase for rhbz#455363.

2008-07-08  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-stop.c (main): Fix a typo.

2008-07-03  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/connection.c (xim_connection_forward_client_message_event):
	ifdef conditioned code.

	* tests/rhbz_453358.c: new testcase.

	* src/factory_info.c (imsettings_info_manager_real_get_current_user_im):
	check if current user IM is still valid. (rhbz#453358)